--- a/my-app/styles/globals.css
+++ b/my-app/styles/globals.css
@@ -3,6 +3,12 @@
   --foreground: #171717;
 }
 
+.lxgw-wenkai-mono-tc-regular {
+  font-family: "LXGW WenKai Mono TC", monospace;
+  font-weight: 400;
+  font-style: normal;
+}
+
 @media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
@@ -12,16 +18,26 @@
 
 html,
 body {
-  
+  height: 100%;
   max-width: 100vw;
   overflow-x: hidden;
 }
 
 body {
+  background: #d1903cc2;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to bottom, #897d55c5, #897d55df);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to bottom, #897d55aa, #897d55e9); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+  /* background-image: url('../public/paper.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed; 
+  background-blend-mode: multiply;
+  filter: contrast(1.1) brightness(0.95);
   
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  background: rgba(169, 98, 96, 0.5); */
+  color: white;
+  font-family: "Noto Serif HK", serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
